not workable,backup it

--- a/xacesite/templates/wiki.html
+++ b/xacesite/templates/wiki.html
@@ -36,8 +36,8 @@
   <link rel="canonical" href="http://www.example.com/">
   -->
 
-  <link rel="stylesheet" href="/xacesite/statics/css/amazeui.min.css">
-  <link rel="stylesheet" href="/xacesite/statics/css/app.css">
+  <link rel="stylesheet" href="/statics/amaze/css/amazeui.min.css">
+  <link rel="stylesheet" href="/statics/amaze/css/app.css">
       <title>{{ PAGE_TITLE}}</title>
 </head>
 <body>
